--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
+
+#node_modules
 */**/node_modules
+
+
+#frontend
+frontend/src/node_modules/@sapper/
+!frontend/src/node_modules/images/
+frontend/__sapper__/
