--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,12 @@
 # node_modules
 */node_modules
 
-#frontend
+# back
+back/*
+!back/*.sh
+
+
+# frontend
 frontend/src/node_modules/@sapper
 !frontend/src/node_modules/images/*
 frontend/__sapper__/
