--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "compression": "^1.7.1",
+    "ipfs-http-client": "^52.0.3",
     "polka": "next",
     "sirv": "^1.0.0"
   },
@@ -29,5 +30,6 @@
     "rollup": "^2.3.4",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0"
-  }
+  },
+  "type": "module"
 }
