--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "compression": "^1.7.1",
+    "ethers": "^5.4.6",
     "ipfs-http-client": "^52.0.3",
     "polka": "next",
-    "sirv": "^1.0.0"
+    "sirv": "^1.0.0",
+    "web3modal": "^1.9.4"
   },
   "devDependencies": {
     "sapper": "^0.28.0",
@@ -30,6 +32,5 @@
     "rollup": "^2.3.4",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0"
-  },
-  "type": "module"
+  }
 }
