--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,13 +12,12 @@
     "compression": "^1.7.1",
     "ethers": "^5.4.6",
     "ipfs-http-client": "^52.0.3",
+    "mapbox-gl": "^2.4.1",
     "polka": "next",
     "sirv": "^1.0.0",
     "web3modal": "^1.9.4"
   },
   "devDependencies": {
-    "sapper": "^0.28.0",
-    "svelte": "^3.17.3",
     "@babel/core": "^7.0.0",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.0.0",
@@ -31,6 +30,8 @@
     "@rollup/plugin-url": "^5.0.0",
     "rollup": "^2.3.4",
     "rollup-plugin-svelte": "^7.0.0",
-    "rollup-plugin-terser": "^7.0.0"
+    "rollup-plugin-terser": "^7.0.0",
+    "sapper": "^0.28.0",
+    "svelte": "^3.17.3"
   }
 }
