--- a/hardhat/package.json
+++ b/hardhat/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "@nomiclabs/hardhat-waffle": "^2.0.1",
-    "@openzeppelin/contracts": "^4.3.2"
+    "@openzeppelin/contracts": "^4.3.2",
+    "truffle-flattener": "^1.5.0"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.2",
