--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,11 @@
     "start": "node __sapper__/build"
   },
   "dependencies": {
+    "@rollup/plugin-json": "^4.1.0",
+    "axios": "^0.21.4",
     "compression": "^1.7.1",
     "ethers": "^5.4.6",
+    "https": "^1.0.0",
     "ipfs-http-client": "^52.0.3",
     "mapbox-gl": "^2.4.1",
     "polka": "next",
