--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,7 @@
     "compression": "^1.7.1",
     "ethers": "^5.4.6",
     "https": "^1.0.0",
-    "ipfs-http-client": "^52.0.3",
+    "ipfs-http-client": "^53.0.1",
     "mapbox-gl": "^2.4.1",
     "polka": "next",
     "sirv": "^1.0.0",
@@ -31,6 +31,8 @@
     "@rollup/plugin-node-resolve": "^8.0.0",
     "@rollup/plugin-replace": "^2.4.0",
     "@rollup/plugin-url": "^5.0.0",
+    "body-parser": "^1.19.0",
+    "express-formidable": "^1.2.0",
     "rollup": "^2.3.4",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
